--- a/gmailform/popup.html
+++ b/gmailform/popup.html
@@ -10,11 +10,16 @@
 
 <body>
   <form id="emailForm">
+    <label for="subjectEmail"><strong>Subject Email: </strong></label>
+    <input type="text" rows="3" id="subjectEmail" name="subjectEmail"><br>
+    <br>
     <label for="recipientEmails"><strong>Recipient Emails: </strong></label>
     <input type="email" rows="3" id="recipientEmails" name="recipientEmails"><br>
     <br>
-    <button type="button" id="sendEmailButton">Send Emails</button>
+    <button type="button" id="sendEmailButton" 
+    >Send Emails</button>
   </form>
+
 
 
 
