--- a/gmailform/index.html
+++ b/gmailform/index.html
@@ -379,7 +379,7 @@ body {
         <!-- enter email id -->
         <input type="hidden" id="emailid" placeholder="Enter Email" value=""/>
         <!-- --  -->
-         <a href="http://qa.dotvik.com/Dotvik_Flyer/subscription.php?email="  target="_blank" style="color: #404040!important;text-decoration-line: underline;">unsubscription from this list</a>
+         <a href="http://qa.dotvik.com/Dotvik_Flyer/subscription.php?email=${emailid}"  target="_blank" style="color: #404040!important;text-decoration-line: underline;">unsubscription from this list</a>
       </div>
     </div>
   </div>
