--- a/gmailform/popup.html
+++ b/gmailform/popup.html
@@ -13,11 +13,13 @@
     <label for="subjectEmail"><strong>Subject Email: </strong></label>
     <input type="text" rows="3" id="subjectEmail" name="subjectEmail"><br>
     <br>
-    <label for="recipientEmails"><strong>Recipient Emails: </strong></label>
+    <label for="recipientEmails"><strong>Recipient Email: </strong></label>
     <input type="email" rows="3" id="recipientEmails" name="recipientEmails"><br>
     <br>
-    <button type="button" id="sendEmailButton" 
-    >Send Emails</button>
+    <label for="messageEmail"><strong>Message Email:</strong></label>
+    <input type="text" rows="3" id="messageEmail" name="messageEmail"><br>
+    <br>
+    <button type="button" id="sendEmailButton">Send Emails</button>
   </form>
 
 
